--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>william</h1>
+    <h1>new name</h1>
     <img src="profile.jpeg" alt="">
     <p>my profile text</p>
 </body>
