--- a/index.html
+++ b/index.html
@@ -1,14 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first website</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Student Portal</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: #f0f4f8;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .card {
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    }
+    .nav-link {
+      cursor: pointer;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    <h1>william</h1>
-    <h1>new name</h1>
-    <img src="profile.jpeg" alt="">
-    <p>my profile text</p>
+  <div class="container py-4">
+    <h2 class="text-center mb-4">🎓 Student Utility Portal</h2>
+
+    <!-- Nav Tabs -->
+    <ul class="nav nav-tabs mb-4" id="mainTabs">
+      <li class="nav-item"><a class="nav-link active" onclick="showTab('todoTab')">To-Do</a></li>
+      <li class="nav-item"><a class="nav-link" onclick="showTab('tossTab')">Coin Toss</a></li>
+      <li class="nav-item"><a class="nav-link" onclick="showTab('pollTab')">Poll</a></li>
+    </ul>
+
+    <!-- To-Do Section -->
+    <div id="todoTab">
+      <div class="card p-4">
+        <h4>📋 To-Do List</h4>
+        <form id="todoForm" class="row g-2 mb-3">
+          <div class="col-md-6">
+            <input type="text" class="form-control" id="taskInput" placeholder="Enter task" required />
+          </div>
+          <div class="col-md-4">
+            <input type="date" class="form-control" id="dateInput" required />
+          </div>
+          <div class="col-md-2">
+            <button type="submit" class="btn btn-primary w-100">Add</button>
+          </div>
+        </form>
+        <ul class="list-group" id="todoList"></ul>
+      </div>
+    </div>
+
+    <!-- Coin Toss Section -->
+    <div id="tossTab" class="hidden">
+      <div class="card p-4 text-center">
+        <h4>🪙 Coin Toss</h4>
+        <button class="btn btn-warning my-3" onclick="tossCoin()">Toss</button>
+        <h5 id="tossResult">Result will appear here</h5>
+      </div>
+    </div>
+
+    <!-- Poll Section -->
+    <div id="pollTab" class="hidden">
+      <div class="card p-4">
+        <h4>🗳️ Create Poll</h4>
+        <form id="pollForm" class="mb-3">
+          <input type="text" id="pollQuestion" class="form-control mb-2" placeholder="Enter your question" required />
+          <input type="text" class="form-control mb-2" placeholder="Option 1" required />
+          <input type="text" class="form-control mb-2" placeholder="Option 2" required />
+          <button type="submit" class="btn btn-success">Post Poll</button>
+        </form>
+        <div id="pollList">
+          <!-- Polls will be listed here -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // Tab switcher
+    function showTab(tabId) {
+      document.getElementById('todoTab').classList.add('hidden');
+      document.getElementById('tossTab').classList.add('hidden');
+      document.getElementById('pollTab').classList.add('hidden');
+      document.getElementById(tabId).classList.remove('hidden');
+      document.querySelectorAll('.nav-link').forEach(link => link.classList.remove('active'));
+      event.target.classList.add('active');
+    }
+
+    // To-do functionality
+    const todoForm = document.getElementById('todoForm');
+    const todoList = document.getElementById('todoList');
+
+    todoForm.addEventListener('submit', function (e) {
+      e.preventDefault();
+      const task = document.getElementById('taskInput').value;
+      const date = document.getElementById('dateInput').value;
+      const li = document.createElement('li');
+      li.className = 'list-group-item d-flex justify-content-between';
+      li.textContent = `${task} (Due: ${date})`;
+      const btn = document.createElement('button');
+      btn.className = 'btn btn-sm btn-danger';
+      btn.textContent = 'Delete';
+      btn.onclick = () => li.remove();
+      li.appendChild(btn);
+      todoList.appendChild(li);
+      todoForm.reset();
+    });
+
+    // Coin toss logic
+    function tossCoin() {
+      const result = Math.random() < 0.5 ? 'Heads' : 'Tails';
+      document.getElementById('tossResult').textContent = `Result: ${result}`;
+    }
+
+    // Poll form submission
+    const pollForm = document.getElementById('pollForm');
+    const pollList = document.getElementById('pollList');
+
+    pollForm.addEventListener('submit', function (e) {
+      e.preventDefault();
+      const question = document.getElementById('pollQuestion').value;
+      const options = [...pollForm.querySelectorAll('input[type="text"]')].slice(1).map(input => input.value);
+      const pollDiv = document.createElement('div');
+      pollDiv.className = 'mb-3 p-3 bg-light border rounded';
+      pollDiv.innerHTML = `<strong>${question}</strong><br />`;
+      options.forEach(option => {
+        const btn = document.createElement('button');
+        btn.className = 'btn btn-outline-primary m-1';
+        btn.textContent = option;
+        pollDiv.appendChild(btn);
+      });
+      pollList.prepend(pollDiv);
+      pollForm.reset();
+    });
+  </script>
 </body>
 </html>
