--- a/index.html
+++ b/index.html
@@ -1,140 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Student Portal</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: #f0f4f8;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .card {
-      border-radius: 20px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
-    .nav-link {
-      cursor: pointer;
-    }
-    .hidden {
-      display: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RAJALAKSHMI ENGINEERING COLLEGE - Transport Portal</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        /* Base Styles */
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f4f7fc;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        header {
+            background-color: #004aad;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            font-size: 2rem;
+            font-weight: 600;
+        }
+
+        header .sub-header {
+            font-size: 1rem;
+            color: #dcdcdc;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .nav-bar {
+            background-color: #007bff;
+            padding: 15px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            border-radius: 8px;
+            margin-bottom: 30px;
+        }
+
+        .nav-button {
+            padding: 10px 20px;
+            background-color: white;
+            color: #007bff;
+            font-weight: 600;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: 0.3s ease;
+        }
+
+        .nav-button:hover {
+            background-color: #f1f1f1;
+        }
+
+        .search-container {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-bottom: 40px;
+        }
+
+        .input-search {
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid #007bff;
+            font-size: 1rem;
+            width: 250px;
+        }
+
+        .card-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            margin-bottom: 50px;
+        }
+
+        .card {
+            background-color: white;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            cursor: pointer;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .card h3 {
+            color: #007bff;
+            font-size: 1.25rem;
+        }
+
+        .card p {
+            color: #555;
+            font-size: 1rem;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
+        }
+
+        .contact-info {
+            text-align: center;
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 30px;
+        }
+
+        footer {
+            background-color: #007bff;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        /* Mobile Optimization */
+        @media (max-width: 768px) {
+            .nav-bar {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .search-container {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .card-container {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
+
 <body>
-  <div class="container py-4">
-    <h2 class="text-center mb-4">🎓 Student Utility Portal</h2>
+    <header>
+        RAJALAKSHMI ENGINEERING COLLEGE - Transport Portal
+        <div class="sub-header">Thandalam, Chennai</div>
+    </header>
 
-    <!-- Nav Tabs -->
-    <ul class="nav nav-tabs mb-4" id="mainTabs">
-      <li class="nav-item"><a class="nav-link active" onclick="showTab('todoTab')">To-Do</a></li>
-      <li class="nav-item"><a class="nav-link" onclick="showTab('tossTab')">Coin Toss</a></li>
-      <li class="nav-item"><a class="nav-link" onclick="showTab('pollTab')">Poll</a></li>
-    </ul>
-
-    <!-- To-Do Section -->
-    <div id="todoTab">
-      <div class="card p-4">
-        <h4>📋 To-Do List</h4>
-        <form id="todoForm" class="row g-2 mb-3">
-          <div class="col-md-6">
-            <input type="text" class="form-control" id="taskInput" placeholder="Enter task" required />
-          </div>
-          <div class="col-md-4">
-            <input type="date" class="form-control" id="dateInput" required />
-          </div>
-          <div class="col-md-2">
-            <button type="submit" class="btn btn-primary w-100">Add</button>
-          </div>
-        </form>
-        <ul class="list-group" id="todoList"></ul>
-      </div>
-    </div>
-
-    <!-- Coin Toss Section -->
-    <div id="tossTab" class="hidden">
-      <div class="card p-4 text-center">
-        <h4>🪙 Coin Toss</h4>
-        <button class="btn btn-warning my-3" onclick="tossCoin()">Toss</button>
-        <h5 id="tossResult">Result will appear here</h5>
-      </div>
-    </div>
-
-    <!-- Poll Section -->
-    <div id="pollTab" class="hidden">
-      <div class="card p-4">
-        <h4>🗳️ Create Poll</h4>
-        <form id="pollForm" class="mb-3">
-          <input type="text" id="pollQuestion" class="form-control mb-2" placeholder="Enter your question" required />
-          <input type="text" class="form-control mb-2" placeholder="Option 1" required />
-          <input type="text" class="form-control mb-2" placeholder="Option 2" required />
-          <button type="submit" class="btn btn-success">Post Poll</button>
-        </form>
-        <div id="pollList">
-          <!-- Polls will be listed here -->
+    <div class="container">
+        <!-- Navigation Bar -->
+        <div class="nav-bar">
+            <button class="nav-button" onclick="showAllRoutes()">View All Routes</button>
+            <button class="nav-button" onclick="toggleContactInfo()">Contact Transport Office</button>
+            <button class="nav-button" onclick="showFeedback()">Submit Feedback</button>
         </div>
-      </div>
+
+        <!-- Search Bar -->
+        <div class="search-container">
+            <input type="text" class="input-search" id="searchInput" placeholder="Search by Route No or Name" />
+            <button class="nav-button" onclick="searchRoutes()">Search</button>
+        </div>
+
+        <!-- Route Cards -->
+        <div id="card-container" class="card-container">
+            <!-- Dynamic Route Cards will appear here -->
+        </div>
+
+        <!-- Contact Info -->
+        <div id="contactInfo" class="contact-info" style="display: none;">
+            <h3>Contact Information</h3>
+            <p>📞 Call: +91 44 2715 6300</p>
+            <p>✉️ Email: transport@rajalakshmi.edu.in</p>
+        </div>
     </div>
-  </div>
 
-  <script>
-    // Tab switcher
-    function showTab(tabId) {
-      document.getElementById('todoTab').classList.add('hidden');
-      document.getElementById('tossTab').classList.add('hidden');
-      document.getElementById('pollTab').classList.add('hidden');
-      document.getElementById(tabId).classList.remove('hidden');
-      document.querySelectorAll('.nav-link').forEach(link => link.classList.remove('active'));
-      event.target.classList.add('active');
-    }
+    <footer>
+        &copy; 2025 Rajalakshmi Engineering College - All Rights Reserved
+    </footer>
 
-    // To-do functionality
-    const todoForm = document.getElementById('todoForm');
-    const todoList = document.getElementById('todoList');
+    <script>
+        const routes = [
+            { no: "1", name: "Ennore" },
+            { no: "1B", name: "Periyamedu" },
+            { no: "1C", name: "Tollgate" },
+            { no: "2", name: "Tondiarpet" },
+            { no: "2C", name: "Ajax-Thiruvottiyur" },
+            { no: "3", name: "Choolai" },
+            { no: "3C", name: "Doveton Bridge" },
+            { no: "4", name: "Chintadripet" },
+            { no: "4C", name: "Loyola College" },
+            { no: "5", name: "Chintamani" },
+            { no: "5A", name: "Arumbakkam" },
+            { no: "5B", name: "Maduravoyal Erikarai" },
+            { no: "5C", name: "Thirunagar (Ambica Empire Hotel)" },
+            { no: "6", name: "New Avadi Road Water Tank" },
+            { no: "7", name: "Anna Nagar East" },
+            { no: "7A", name: "Collector Nagar" },
+            { no: "7C", name: "Wavin" },
+            // Add all routes here...
+        ];
 
-    todoForm.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const task = document.getElementById('taskInput').value;
-      const date = document.getElementById('dateInput').value;
-      const li = document.createElement('li');
-      li.className = 'list-group-item d-flex justify-content-between';
-      li.textContent = `${task} (Due: ${date})`;
-      const btn = document.createElement('button');
-      btn.className = 'btn btn-sm btn-danger';
-      btn.textContent = 'Delete';
-      btn.onclick = () => li.remove();
-      li.appendChild(btn);
-      todoList.appendChild(li);
-      todoForm.reset();
-    });
+        // Function to display route cards
+        function displayRoutes(routesToDisplay) {
+            const cardContainer = document.getElementById('card-container');
+            cardContainer.innerHTML = ''; // Clear existing cards
 
-    // Coin toss logic
-    function tossCoin() {
-      const result = Math.random() < 0.5 ? 'Heads' : 'Tails';
-      document.getElementById('tossResult').textContent = `Result: ${result}`;
-    }
+            routesToDisplay.forEach(route => {
+                const card = document.createElement('div');
+                card.classList.add('card');
+                card.innerHTML = `
+                    <h3>Route ${route.no}</h3>
+                    <p>${route.name}</p>
+                    <div class="button-container">
+                        <button class="nav-button" onclick="viewRouteDetails('${route.no}')">View Details</button>
+                    </div>
+                `;
+                cardContainer.appendChild(card);
+            });
+        }
 
-    // Poll form submission
-    const pollForm = document.getElementById('pollForm');
-    const pollList = document.getElementById('pollList');
+        // Search functionality
+        function searchRoutes() {
+            const searchInput = document.getElementById('searchInput').value.toLowerCase();
+            const filteredRoutes = routes.filter(route => 
+                route.no.toLowerCase().includes(searchInput) || route.name.toLowerCase().includes(searchInput)
+            );
+            displayRoutes(filteredRoutes);
+        }
 
-    pollForm.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const question = document.getElementById('pollQuestion').value;
-      const options = [...pollForm.querySelectorAll('input[type="text"]')].slice(1).map(input => input.value);
-      const pollDiv = document.createElement('div');
-      pollDiv.className = 'mb-3 p-3 bg-light border rounded';
-      pollDiv.innerHTML = `<strong>${question}</strong><br />`;
-      options.forEach(option => {
-        const btn = document.createElement('button');
-        btn.className = 'btn btn-outline-primary m-1';
-        btn.textContent = option;
-        pollDiv.appendChild(btn);
-      });
-      pollList.prepend(pollDiv);
-      pollForm.reset();
-    });
-  </script>
+        // Show all routes
+        function showAllRoutes() {
+            displayRoutes(routes);
+        }
+
+        // Toggle contact info
+        function toggleContactInfo() {
+            const contactInfo = document.getElementById('contactInfo');
+            contactInfo.style.display = contactInfo.style.display === 'none' ? 'block' : 'none';
+        }
+
+        // Show feedback form (you can implement this)
+        function showFeedback() {
+            alert("Feedback form is coming soon!");
+        }
+
+        // View route details (you can implement this)
+        function viewRouteDetails(routeNo) {
+            alert(`More details for route ${routeNo}`);
+        }
+
+        // Initial load
+        window.onload = function() {
+            showAllRoutes();
+        }
+    </script>
 </body>
+
 </html>
